# Distributed-Video-Processor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  clean.sh  docker-compose.yml  tcp_server.cpp
protos/: file_system.proto  raft.proto  server.proto  video.proto
src/: CMakeLists.txt  async_server.cpp  main.cpp  tcp_client.cpp  tcp_server.cpp
src/common/: grpc_msg_defs.h  log.cpp  log.h  logger.cpp  logger.h
src/core/: async_server.cpp  async_server.h  client_callback_queue.cpp  client_callback_queue.h  command_log.cpp  command_log.h  commit_channel.cpp  commit_channel.h  concensus_module.cpp  concensus_module.h  node.cpp  node.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  server.cpp  server.h  snapshot.cpp  storage.cpp  storage.h
src/file_system/: chunk_cache_manager.cpp  chunk_cache_manager.h  chunk_manager.cpp  chunk_manager.h  chunk_server.cpp  chunk_server.h  lock_manager.cpp  lock_manager.h
src/orchestrator/: orchestration_client.h  orchestrator.h  request_cache.h
src/processor/: hello.cpp
src/raft/: client_callback_queue.cpp  client_callback_queue.h  command_log.cpp  command_log.h  commit_channel.cpp  commit_channel.h  concensus_module.cpp  concensus_module.h  raft_client.cpp  raft_client.h  raft_msg_defs.h  raft_server.cpp  raft_server.h  rpc_client.cpp  rpc_server.cpp  rpc_server.h  snapshot.cpp  snapshot.h
src/server/: async_server.cpp  async_server.h  server_impl.cpp  server_impl.h  test_server.hpp
